--- a/tsconfig.json
+++ b/tsconfig.json
@@ -32,6 +32,6 @@
       "hooks/*": ["./src/hooks/*"]
     }
   },
-  "include": ["src/**/*.ts", "src/**/*.d.ts", "src/**/*.tsx", "src/**/*.vue"],
+  "include": ["src/**/*.ts", "src/**/*.d.ts", "src/**/*.tsx", "src/**/*.vue", "src/pages/canvas/RippleFloatOnTheWater/waterRipple.js"],
   "references": [{ "path": "./tsconfig.node.json" }]
 }
