新增实用功能模块

--- a/package.json
+++ b/package.json
@@ -12,13 +12,20 @@
   "author": "River",
   "dependencies": {
     "@ant-design/icons-vue": "^6.1.0",
+    "@mediapipe/selfie_segmentation": "^0.1.1675465747",
+    "@tensorflow-models/body-segmentation": "^1.0.1",
+    "@tensorflow/tfjs-backend-webgl": "^4.8.0",
+    "@tensorflow/tfjs-converter": "^4.8.0",
+    "@tensorflow/tfjs-core": "^4.8.0",
     "@vueuse/core": "^10.2.0",
     "ant-design-vue": "^4.0.0-rc.5",
     "classnames": "^2.3.2",
+    "pako": "^2.1.0",
     "particles.js": "^2.0.0",
     "sphere-collision": "^1.1.6",
     "swiper": "^9.4.1",
     "typed.js": "^2.0.16",
+    "uzip": "^0.20201231.0",
     "vue": "^3.3.0",
     "vue-i18n": "9",
     "vue-router": "4"
