--- a/package.json
+++ b/package.json
@@ -21,11 +21,13 @@
     "ant-design-vue": "^4.0.0-rc.5",
     "classnames": "^2.3.2",
     "date-fns": "^2.30.0",
+    "gsap": "^3.12.2",
     "lodash-es": "^4.17.21",
     "pako": "^2.1.0",
     "particles.js": "^2.0.0",
     "sphere-collision": "^1.1.6",
     "swiper": "^9.4.1",
+    "three": "^0.154.0",
     "typed.js": "^2.0.16",
     "uzip": "^0.20201231.0",
     "vue": "^3.3.0",
@@ -35,6 +37,8 @@
   "devDependencies": {
     "@types/lodash-es": "^4.17.7",
     "@types/node": "^20.3.1",
+    "@types/swiper": "^6.0.0",
+    "@types/three": "^0.152.1",
     "@vitejs/plugin-vue": "^4.1.0",
     "sass": "^1.63.3",
     "sass-loader": "^13.3.2",
