--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@vueuse/core": "^10.2.0",
     "ant-design-vue": "^4.0.0-rc.5",
     "bignumber.js": "^9.1.1",
+    "cannon-es": "^0.20.0",
     "classnames": "^2.3.2",
     "date-fns": "^2.30.0",
     "echarts": "^5.4.2",
